--- a/db/package.json
+++ b/db/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.3.2",
     "nodemon": "^2.0.22",
     "path": "^0.12.7"
   }
