--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "crypto-js": "^4.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
